
Tue Sep 16 21:03:58 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* icall-def.h, threads-types.h, threads.c: fixed SpinWait()
	implementation (bug #423582).

2008-09-16  Zoltan Varga  <vargaz@gmail.com>

	* object.c (mono_object_get_virtual_method): Handle the case method->slot
	is not set. Fixes #426309.

2008-09-16  Jb Evain  <jbevain@novell.com>

	* class.c (mono_class_from_name): fix the exported type look up
	when the type is defined in a referenced assembly.

2008-09-16  Jb Evain  <jbevain@novell.com>

	* reflection.c (mono_image_fill_export_table_from_type_forwarders):
	increment the next index counter on each iteration to make that work
	for more than one type forwarder. Unmanaged part to fix #422929.

2008-09-15  Mark Probst  <mark.probst@gmail.com>

	* object-internals.h: enum ComInterfaceType in
	MonoInterfaceTypeAttribute is guint32, not guint16.

2008-09-12  Mark Probst  <mark.probst@gmail.com>

	* cil-coff.h, image.c, reflection.c: Endianness fixes in image
	writing code.

2008-09-11  Mark Probst  <mark.probst@gmail.com>

	* icall.c: Boolean arguments to a runtime invoke are MonoBoolean,
	not gboolean.

2008-09-11  Mark Probst  <mark.probst@gmail.com>

	* debug-mono-symfile.c (mono_debug_symfile_lookup_location):
	Endianness fixes for MonoSymbolFileOffsetTable.

2008-09-10  Bill Holmes  <billholmes54@gmail.com>

	* process.c (complete_path) : Removing quotes from the 
	  input path.  The glib file routines do not handle file paths
	  that have quotes around them.

	Code is contributed under MIT/X11 license.

2008-09-10  Bill Holmes  <billholmes54@gmail.com>

	* socket-io.h : Adding a comment to provide locations where 
	  changes to MonoSocketAsyncResult need to be synced.

	Code is contributed under MIT/X11 license.

2008-09-10  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_marshal_custom): Call NativeToManaged for non-out 
	parameters as well. Fixes #425001.

2008-09-08  Miguel de Icaza  <miguel@novell.com>
