@@ -1,4 +1,11 @@
 
+2008-09-17  Robert Jordan  <robertj@gmx.net>
+
+	* marshal.c (mono_marshal_get_ldflda_wrapper): Add support for
+	context bound objects. Fixes #415577.
+
+	Code is contributed under MIT/X11 license.
+
 Tue Sep 16 21:03:58 CEST 2008 Paolo Molaro <lupus@ximian.com>
 
 	* icall-def.h, threads-types.h, threads.c: fixed SpinWait()
